# libgie

./: CMakeLists.txt
include/gie/: caching_istream_iterator.hpp  config.hpp  debug.hpp  debugger_break.hpp  exceptions.hpp  finally.hpp  format.hpp  future.hpp  misc.hpp  next_power_of_two.hpp  pair_ostream.hpp  self_impl.hpp  seq_gen.hpp  simple_caching_allocator.hpp  simple_caching_allocator_mt_wrapper.hpp  simple_lru.hpp  simple_to_std_allocator.hpp  synchronized.hpp  tuple_apply.hpp  type_util.hpp  util-scope-exit.hpp
include/gie/allocator/: construct_new.hpp  simple_to_std_aligned_allocator.hpp  simple_to_std_allocator.hpp
include/gie/asio/: custom_alloc_handler.hpp  simple_common.hpp  simple_mt_service.hpp  simple_mt_service_fwd.hpp  simple_service.hpp
include/gie/debug/: magic_cookie.hpp
include/gie/easy_start/: safe_main.hpp
include/gie/glwrap/: glwrap.hpp  matrix_types.hpp
include/gie/log/: debug.hpp  log.hpp
include/gie/qt/: gie_util_qio2stream.hpp  qt_def_exception_stubs.hpp  qt_helper.hpp  stcrypt-qt-async-function.hpp
include/gie/sbdec/: sbdec.hpp
include/gie/sdlwrap/: sdlwrap.hpp
include/gie/sio/: util-sio-exceptions.hpp  util-sio.hpp  utils-sio-fixed_types.hpp
include/gie/sio2/: sio2_core.hpp  sio2_gen_struct.hpp  sio2_push_back_stream.hpp  sio2_push_back_write_stream.hpp  sio2_range_reader.hpp
include/gie/zmq/: zmq.hpp
src/: exceptions.cpp  logger_g3log.cpp  logger_g3log.hpp
tests/: sio2_test.cpp  sio2_test02.cpp  ut_caching_istream_iterator.cpp  ut_next_power_of_two.cpp  ut_sbdec01.cpp  ut_simple_caching_allocator.cpp  ut_simple_lru.cpp  ut_sio2_test03.cpp  ut_sio2_test04.cpp
